<resources>
    <string name="app_name">FlassStu</string>
    <string name="title_home">課程清單</string>
    <string name="title_leave">學生假單</string>
    <string name="title_notification">訊息通知</string>
    <string name="title_user">帳戶管理</string>
    <string name="signup_name2">名字</string>
    <string name="signup_name1">姓氏</string>
    <string name="signup_id">學號</string>
    <string name="signup_email">學校電子信箱</string>
    <string name="signup_password1">密碼(至少六碼)</string>
    <string name="signup_password2">再次輸入密碼</string>
    <string name="signup_key">老師金鑰</string>
    <string name="signup">Sign Up</string>
    <string name="next">Next</string>
    <string name="signup_choose">請選擇身分</string>
    <string name="teacher">老師</string>
    <string name="student">學生</string>
    <string name="search_student">搜尋學生</string>
    <string name="search_class">搜尋學生</string>
    <string name="signin_email">請輸入Email</string>
    <string name="signin_password">請輸入密碼</string>
    <string name="signin">Log In</string>
    <string name="signup_">Sign Up</string>
    <string name="or">───────OR───────</string>
    <string name="test">辨識測試</string>
    <string name="retrieve_result"><b>辨識結果</b></string>
    <string name="train">圖片上傳</string>
    <string name="takePhoto">拍攝相片</string>
    <string name="start"><b>START !</b></string>
    <string name="login">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_s__homepage">S_ActivityHomepage</string>

    <!--spinner array -->
    <string-array name="leave_reason">
        <item>公假</item>
        <item>病假</item>
        <item>事假</item>
        <item>喪假</item>
    </string-array>
</resources>
