<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="65dp"
    android:paddingRight="65dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="167dp"
            app:srcCompat="@drawable/onepunch" />

        <EditText
            android:id="@+id/input_account"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/signin_email"
            android:inputType="textEmailAddress"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/signin_password"
            android:inputType="textPassword"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_round_button_blue"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_round_button_blue"
            android:text="@string/signup_"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_round_button_blue"
            android:text="FORGET YOUR PASSWORD?"
            android:textColor="#FFF" />

    </LinearLayout>


</LinearLayout>