<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signup"
            android:textColor="#FFF"
            android:textSize="32sp"
            app:fontFamily="@font/asap_medium"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="75dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_choose"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/bg_round_button_blue"
                    android:text="@string/teacher"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/bg_round_button_blue"
                    android:text="@string/student"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

            </LinearLayout>


            <Button
                android:id="@+id/button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="200dp"
                android:background="@drawable/bg_round_button_yellow"
                android:text="@string/next"
                android:textSize="18sp" />
        </LinearLayout>




    </LinearLayout>
</LinearLayout>