<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/signup"
            android:textColor="#FFF"
            android:textSize="32sp"
            app:fontFamily="@font/asap_medium"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="75dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextName1"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/signup_name1"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF"
                    tools:layout_editor_absoluteX="40dp"
                    tools:layout_editor_absoluteY="135dp" />

                <EditText
                    android:id="@+id/editTextName2"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/signup_name2"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF"
                    tools:layout_editor_absoluteX="162dp"
                    tools:layout_editor_absoluteY="135dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/spinner_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/spinner_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/editTextId"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/signup_id"
                android:inputType="textEmailAddress"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="197dp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="197dp" />

            <EditText
                android:id="@+id/editTextPassword1"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/signup_password1"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="260dp" />

            <EditText
                android:id="@+id/editTextPassword2"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/signup_password2"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="327dp" />


            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_round_button_yellow"
                android:text="@string/next"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>