<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainAndTest"
    android:orientation="vertical"
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginTop="58dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#000000"
            android:lineSpacingExtra="12sp"
            android:gravity="center_horizontal"
            android:text="建議上傳三張自己不同角度的照片上傳完後點選 「辨識測試」 成功後即跳至首頁 "
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="173dp"
        android:layout_height="173dp"
        android:layout_marginTop="47dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:src="@drawable/pic3">

        </ImageView>
    </LinearLayout>

    <Button
        android:id="@+id/btTakePhoto"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_round_button_yellow"
        android:text="@string/takePhoto"
        android:textSize="20sp" />
    <Button
        android:id="@+id/buttonTrain"
        android:layout_below="@+id/btTakePhoto"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_round_button_yellow"
        android:text="@string/train"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonTest"
        android:layout_below="@id/buttonTrain"
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_round_button_yellow"
        android:text="@string/test"
        android:textSize="20sp" />

</LinearLayout>